--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "yarn migrate:deploy && next build",
-    "start": "next start --port ${PORT-3000}",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:deploy": "prisma migrate deploy --preview-feature",
     "migrate:status": "prisma migrate status --preview-feature",
@@ -13,16 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "3.6.0",
-    "next": "10.0.6",
-    "pg": "^8.5.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "swr": "^0.4.1"
+    "pg": "^8.5.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "prisma": "3.6.0",
-    "typescript": "^4.1.3"
+    "prisma": "3.6.0"
   }
 }
